# Computational-methods-labs

./: CMakeLists.txt  README.md
labs/lab_1/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs  Spline.cs
labs/lab_1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
labs/lab_2/: CMakeLists.txt  main.cpp  utils.cpp
labs/lab_2/include/: LU_decomposition.h  gauss.h  gradient.h  high_relaxation.h  io.h  kramer.h  simple_iterations.h  utils.h  zeidel.h
labs/lab_3/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs
labs/lab_3/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
labs/lab_4/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs  Thermal.cs
labs/lab_4/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
